--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3332,5 +3332,5 @@
   "bCAKE only boosts token incentive (often CAKE) APR. Actual multiplier is subject to position manager and veCAKE pool condition.": "bCAKE only boosts token incentive (often CAKE) APR. Actual multiplier is subject to position manager and veCAKE pool condition.",
   "Booster Update": "Booster Update",
   "Booster has been updated.": "Booster has been updated.",
-  "Migrate to new v2 bCake here.": "Migrate to new v2 bCake here."
+  "Migrate to new v2 bCake here": "Migrate to new v2 bCake here"
 }
