feat: Link to options (#9529)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
This PR adds support for options trading on PancakeSwap, including new
URLs and confirmation modals.

### Detailed summary
- Added `getOptionsUrl` function
- Added `usePerpUrl` hook
- Updated menu items with options trading
- Added `options` atom and related functionalities
- Updated translations for options trading
- Updated confirmation modals for perpetuals and options trading

> The following files were skipped due to too many changes:
`apps/web/src/components/Menu/index.tsx`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3332,8 +3332,11 @@
   "bCAKE only boosts token incentive (often CAKE) APR. Actual multiplier is subject to position manager and veCAKE pool condition.": "bCAKE only boosts token incentive (often CAKE) APR. Actual multiplier is subject to position manager and veCAKE pool condition.",
   "Booster Update": "Booster Update",
   "Booster has been updated.": "Booster has been updated.",
-  "Migrate to new v2 bCake here": "Migrate to new v2 bCake here",
   "Try it now": "Try it now",
   "Trade Options & Build On-Chain Liquidity": "Trade Options & Build On-Chain Liquidity",
-  "Trade Options & Build On-Chain Options Liquidity": "Trade Options & Build On-Chain Options Liquidity"
+  "Trade Options & Build On-Chain Options Liquidity": "Trade Options & Build On-Chain Options Liquidity",
+  "Options": "Options",
+  "PancakeSwap Options": "PancakeSwap Options",
+  "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).": "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).",
+  "Migrate to new v2 bCake here": "Migrate to new v2 bCake here"
 }
