feat: gauges-pm (#9549)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
This PR introduces a new `@pancakeswap/position-managers` dependency,
updates table layouts, adds a `managerName` field, and enhances position
manager visuals.

### Detailed summary
- Added `@pancakeswap/position-managers` dependency
- Updated table layouts in various components
- Added `managerName` field to `GaugeALMConfig`
- Enhanced position manager visuals with logos and manager name display

> The following files were skipped due to too many changes:
`apps/web/src/views/GaugesVoting/components/Table/GaugesTable/TableRow.tsx`,
`apps/web/src/views/GaugesVoting/components/GaugeTokenImage.tsx`,
`apps/web/src/views/GaugesVoting/components/Table/VoteTable/TableRow.tsx`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3338,5 +3338,6 @@
   "Options": "Options",
   "PancakeSwap Options": "PancakeSwap Options",
   "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).": "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).",
-  "Migrate to new v2 bCake here": "Migrate to new v2 bCake here"
+  "Migrate to new v2 bCake here": "Migrate to new v2 bCake here",
+  "chain & strategy": "chain & strategy"
 }
