--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3336,5 +3336,7 @@
   "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).": "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).",
   "Migrate to new v2 bCake here": "Migrate to new v2 bCake here",
   "I understand that this feature is deprecated and no longer in maintenance.": "I understand that this feature is deprecated and no longer in maintenance.",
-  "chain & strategy": "chain & strategy"
+  "chain & strategy": "chain & strategy",
+  "Placing Order Disabled": "Placing Order Disabled",
+  "Orders missing? Check out:": "Orders missing? Check out:"
 }
