--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3338,5 +3338,6 @@
   "I understand that this feature is deprecated and no longer in maintenance.": "I understand that this feature is deprecated and no longer in maintenance.",
   "chain & strategy": "chain & strategy",
   "Placing Order Disabled": "Placing Order Disabled",
-  "Orders missing? Check out:": "Orders missing? Check out:"
+  "Orders missing? Check out:": "Orders missing? Check out:",
+  "Limit V2 (deprecated)": "Limit V2 (deprecated)"
 }
