--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -1921,9 +1921,6 @@
   "Zap in %amount% BNB for %symbol%": "Zap in %amount% BNB for %symbol%",
   "Zap in %amount% %symbol% for %lpSymbol%": "Zap in %amount% %symbol% for %lpSymbol%",
   "never executes": "never executes",
-  "Order not allowed": "Order not allowed",
-  "Only possible to place sell orders above market rate": "Only possible to place sell orders above market rate",
-  "Only possible to place buy orders below market rate": "Only possible to place buy orders below market rate",
   "Insufficient input token balance. Your transaction may fail.": "Insufficient input token balance. Your transaction may fail.",
   "Wrong Network": "Wrong Network",
   "Check your network": "Check your network",
@@ -3336,5 +3333,8 @@
   "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).": "Please note that you are being redirected to an externally hosted website associated with our partner Stryke (formerly Dopex).",
   "Migrate to new v2 bCake here": "Migrate to new v2 bCake here",
   "I understand that this feature is deprecated and no longer in maintenance.": "I understand that this feature is deprecated and no longer in maintenance.",
-  "chain & strategy": "chain & strategy"
+  "chain & strategy": "chain & strategy",
+  "Placing Order Disabled": "Placing Order Disabled",
+  "Orders missing? Check out:": "Orders missing? Check out:",
+  "Limit V2 (deprecated)": "Limit V2 (deprecated)"
 }
