chore: Masa TC banner

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3335,5 +3335,8 @@
   "chain & strategy": "chain & strategy",
   "Placing Order Disabled": "Placing Order Disabled",
   "Orders missing? Check out:": "Orders missing? Check out:",
-  "Limit V2 (deprecated)": "Limit V2 (deprecated)"
+  "Limit V2 (deprecated)": "Limit V2 (deprecated)",
+  "Join the MASA Trading Competition": "Join the MASA Trading Competition",
+  "Win 700,000 $MASA": "Win 700,000 $MASA",
+  "Trade to win 700,000 $MASA": "Trade to win 700,000 $MASA"
 }
