chore: add translation key

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3338,5 +3338,6 @@
   "Limit V2 (deprecated)": "Limit V2 (deprecated)",
   "Join the MASA Trading Competition": "Join the MASA Trading Competition",
   "Win 700,000 $MASA": "Win 700,000 $MASA",
-  "Trade to win 700,000 $MASA": "Trade to win 700,000 $MASA"
+  "Trade to win 700,000 $MASA": "Trade to win 700,000 $MASA",
+  "to Win 700,000 $MASA": "to Win 700,000 $MASA"
 }
