chore: update i18n key

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3339,5 +3339,9 @@
   "Join the MASA Trading Competition": "Join the MASA Trading Competition",
   "Win 700,000 $MASA": "Win 700,000 $MASA",
   "Trade to win 700,000 $MASA": "Trade to win 700,000 $MASA",
-  "to Win 700,000 $MASA": "to Win 700,000 $MASA"
+  "to Win 700,000 $MASA": "to Win 700,000 $MASA",
+  "Vote": "Vote",
+  "sort by": "sort by",
+  "Unselect All": "Unselect All",
+  "Done": "Done"
 }
