--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3342,7 +3342,7 @@
   "Vote": "Vote",
   "sort by": "sort by",
   "Unselect All": "Unselect All",
-  "Mint / Transfar USDV": "Mint / Transfar USDV",
+  "Mint / Transfer USDV": "Mint / Transfer USDV",
   "Swap stablecoins for USDV": "Swap stablecoins for USDV",
   "Done": "Done"
 }
