feat: add powered by link

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3344,5 +3344,6 @@
   "Unselect All": "Unselect All",
   "Mint / Transfer USDV": "Mint / Transfer USDV",
   "Swap stablecoins for USDV": "Swap stablecoins for USDV",
+  "Powered by": "Powered by",
   "Done": "Done"
 }
