--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -1448,7 +1448,6 @@
   "Delayed": "Delayed",
   "Fast": "Fast",
   "Subgraph is currently experiencing delays due to %chainName% issues. Performance may suffer until subgraph is restored.": "Subgraph is currently experiencing delays due to %chainName% issues. Performance may suffer until subgraph is restored.",
-  "Subgraph is currently experiencing delays due to %chainName% issues. Performance may suffer until subgraph is restored.": "Subgraph is currently experiencing delays due to %chainName% issues. Performance may suffer until subgraph is restored.",
   "Subgraph is currently experiencing delays due to BSC issues. Rank and volume data may be inaccurate until subgraph is restored.": "Subgraph is currently experiencing delays due to BSC issues. Rank and volume data may be inaccurate until subgraph is restored.",
   "No issues with the subgraph.": "No issues with the subgraph.",
   "Turn on subgraph health indicator all the time. Default is to show the indicator only when the network is delayed": "Turn on subgraph health indicator all the time. Default is to show the indicator only when the network is delayed",
@@ -3342,5 +3341,11 @@
   "Vote": "Vote",
   "sort by": "sort by",
   "Unselect All": "Unselect All",
+  "Mint / Transfer USDV": "Mint / Transfer USDV",
+  "Swap stablecoins for USDV": "Swap stablecoins for USDV",
+  "Powered by": "Powered by",
+  "USDV Disclaimer": "USDV Disclaimer",
+  "Verified USD ($USDV), is a product offered by USDV.money and is not associated with PancakeSwap.": "Verified USD ($USDV), is a product offered by USDV.money and is not associated with PancakeSwap.",
+  "By checking this box, I understand that I am using USDV at my own risk. I accept full responsibility for any losses incurred due to my actions.": "By checking this box, I understand that I am using USDV at my own risk. I accept full responsibility for any losses incurred due to my actions.",
   "Done": "Done"
 }
