change badge to say best quote

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3238,7 +3238,7 @@
   "%network% tokens": "%network% tokens",
   "All tokens": "All tokens",
   "select a currency": "select a currency",
-  "Best price": "Best price",
+  "Best quote": "Best quote",
   "Best": "Best",
   "quote unavailable": "quote unavailable",
   "%provider%": "%provider%",
