chore: update translations.json

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3351,5 +3351,6 @@
   "Swell's website": "Swell's website",
   "Done": "Done",
   "Single-Sided Strategy": "Single-Sided Strategy",
-  "Adaptive Portfolio Strategy": "Adaptive Portfolio Strategy"
+  "Adaptive Portfolio Strategy": "Adaptive Portfolio Strategy",
+  "Please note that the Pearls earned from this vault will only appear in your balance at a later time.": "Please note that the Pearls earned from this vault will only appear in your balance at a later time."
 }
