feat: vecake-status (#9678)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
This PR focuses on updating text and UI elements related to cake staking
positions.

### Detailed summary
- Added `delegated` boolean to `useVeCakeUserInfo.ts`
- Updated text to "migrated position" in `CakePoolLockStatus.tsx`
- Renamed "My VeCAKE" to "My veCAKE"
- Added `delegated` and lock status info in `LockedVeCakeStatus.tsx`
- Added "migrated position" info in `LockedVeCakeStatus.tsx`
- Updated translations in `translations.json`

> The following files were skipped due to too many changes:
`apps/web/src/views/CakeStaking/components/LockedVeCakeStatus.tsx`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -2867,16 +2867,13 @@
   "add": "add",
   "Unlock": "Unlock",
   "Renew Lock": "Renew Lock",
-  "my cake staking": "my cake staking",
   "Migration Needed": "Migration Needed",
   "cake locked": "cake locked",
   "unlocks in": "unlocks in",
   "Migrate to veCAKE": "Migrate to veCAKE",
   "Learn More >>": "Learn More >>",
-  "View CAKE Pool Position": "View CAKE Pool Position",
   "on": "on",
   "Position migrated from CAKE Pool can not be extended or topped up. To extend or add more CAKE, set up a native veCAKE position.": "Position migrated from CAKE Pool can not be extended or topped up. To extend or add more CAKE, set up a native veCAKE position.",
-  "Renew your veCAKE position to continue enjoying the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!": "Renew your veCAKE position to continue enjoying the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!",
   "Migrate your CAKE staking position to veCAKE and enjoy the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!": "Migrate your CAKE staking position to veCAKE and enjoy the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!",
   "MY veCAKE": "MY veCAKE",
   "New to CAKE Staking": "New to CAKE Staking",
@@ -2928,7 +2925,6 @@
   "This product has been upgraded": "This product has been upgraded",
   "Reward paused for this position": "Reward paused for this position",
   "to be locked until": "to be locked until",
-  "My VeCAKE": "My VeCAKE",
   "Once locked, your CAKE will be staked in veCAKE contract until this date. Early withdrawal is not available.": "Once locked, your CAKE will be staked in veCAKE contract until this date. Early withdrawal is not available.",
   "The ratio factor between the amount of CAKE locked and the final veCAKE number. Extend your lock duration for a higher ratio factor.": "The ratio factor between the amount of CAKE locked and the final veCAKE number. Extend your lock duration for a higher ratio factor.",
   "Unlock to create a new lock position": "Unlock to create a new lock position",
@@ -3352,5 +3348,11 @@
   "Done": "Done",
   "Single-Sided Strategy": "Single-Sided Strategy",
   "Adaptive Portfolio Strategy": "Adaptive Portfolio Strategy",
+  "migrated position": "migrated position",
+  "My veCAKE": "My veCAKE",
+  "native position": "native position",
+  "Adding CAKE or extending CAKE will be applying to your native position.": "Adding CAKE or extending CAKE will be applying to your native position.",
+  "View Migrated Position": "View Migrated Position",
+  "Renew your veCAKE position to continue enjoying the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!": "Renew your veCAKE position to continue enjoying the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!",
   "Please note that the Pearls earned from this vault will only appear in your balance at a later time.": "Please note that the Pearls earned from this vault will only appear in your balance at a later time."
 }
