--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3354,5 +3354,6 @@
   "Adding CAKE or extending CAKE will be applying to your native position.": "Adding CAKE or extending CAKE will be applying to your native position.",
   "View Migrated Position": "View Migrated Position",
   "Renew your veCAKE position to continue enjoying the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!": "Renew your veCAKE position to continue enjoying the benefits of weekly CAKE yield, revenue share, gauges voting, farm yield boosting, participating in IFOs, and so much more!",
+  "Full digits: %numberWithFullDigits%": "Full digits: %numberWithFullDigits%",
   "Please note that the Pearls earned from this vault will only appear in your balance at a later time.": "Please note that the Pearls earned from this vault will only appear in your balance at a later time."
 }
