--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3353,5 +3353,13 @@
   "Exact number: %numberWithFullDigits%": "Exact number: %numberWithFullDigits%",
   "Please note that the Pearls earned from this vault will only appear in your balance at a later time.": "Please note that the Pearls earned from this vault will only appear in your balance at a later time.",
   "Fee saved": "Fee saved",
-  "Fees saved on PancakeSwap compared to major DEXs charging interface fees": "Fees saved on PancakeSwap compared to major DEXs charging interface fees"
+  "Fees saved on PancakeSwap compared to major DEXs charging interface fees": "Fees saved on PancakeSwap compared to major DEXs charging interface fees",
+  "Select token for gas": "Select token for gas",
+  "Select any ERC20 token to pay for the gas fee.": "Select any ERC20 token to pay for the gas fee.",
+  "Pay for network fees with any asset from the list below.": "Pay for network fees with any asset from the list below.",
+  "Make sure you have at least $1 worth of the token.": "Make sure you have at least $1 worth of the token.",
+  "Gas fee": "Gas fee",
+  "Gas / Network fee": "Gas / Network fee",
+  "“Gas” is a measure of how much it costs someone to transact on the blockchain.": "“Gas” is a measure of how much it costs someone to transact on the blockchain.",
+  "Please check tx confirm modal in your wallet for the final gas fee.": "Please check tx confirm modal in your wallet for the final gas fee."
 }
