--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3383,5 +3383,13 @@
   "IFO live!": "IFO live!",
   "LISTA IFO": "LISTA IFO",
   "OK": "OK",
-  "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's": "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's"
+  "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's": "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's",
+  "Select token for gas": "Select token for gas",
+  "Select any ERC20 token to pay for the gas fee.": "Select any ERC20 token to pay for the gas fee.",
+  "Pay for network fees with any asset from the list below.": "Pay for network fees with any asset from the list below.",
+  "Make sure you have at least $1 worth of the token.": "Make sure you have at least $1 worth of the token.",
+  "Gas fee": "Gas fee",
+  "Gas / Network fee": "Gas / Network fee",
+  "“Gas” is a measure of how much it costs someone to transact on the blockchain.": "“Gas” is a measure of how much it costs someone to transact on the blockchain.",
+  "Please check tx confirm modal in your wallet for the final gas fee.": "Please check tx confirm modal in your wallet for the final gas fee."
 }
