chore: translations typo

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3238,6 +3238,7 @@
   "Best": "Best",
   "quote unavailable": "quote unavailable",
   "%provider%": "%provider%",
+  "1 %asset% = ": "1 %asset% = ",
   "paste your BTC address here": "paste your BTC address here",
   "By continuing you agree to our": "By continuing you agree to our",
   "terms of service": "terms of service",
