--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3355,17 +3355,11 @@
   "Please note that the Pearls earned from this vault will only appear in your balance at a later time.": "Please note that the Pearls earned from this vault will only appear in your balance at a later time.",
   "Fee saved": "Fee saved",
   "Fees saved on PancakeSwap compared to major DEXs charging interface fees": "Fees saved on PancakeSwap compared to major DEXs charging interface fees",
-  "Select token for gas": "Select token for gas",
-  "Select any ERC20 token to pay for the gas fee.": "Select any ERC20 token to pay for the gas fee.",
-  "Pay for network fees with any asset from the list below.": "Pay for network fees with any asset from the list below.",
-  "Make sure you have at least $1 worth of the token.": "Make sure you have at least $1 worth of the token.",
-  "Gas Token": "Gas Token",
   "Gauge Not Found": "Gauge Not Found",
   "Gauge can not be found using the hash passed via URL.": "Gauge can not be found using the hash passed via URL.",
   "Up to $8M in interface fees paid refunded!": "Up to $8M in interface fees paid refunded!",
   "Get up to $8M USD in interface fees paid refunded on PancakeSwap": "Get up to $8M USD in interface fees paid refunded on PancakeSwap",
   "Match your volume and we'll refund ALL your interface fees paid": "Match your volume and we'll refund ALL your interface fees paid",
-  "Powered by Zyfi Paymaster": "Powered by Zyfi Paymaster",
   "Please refer to the transaction confirmation on your wallet for the final gas fee.": "Please refer to the transaction confirmation on your wallet for the final gas fee.",
   "Select a token to pay gas fees.": "Select a token to pay gas fees.",
   "Get up to $8M USD in interface fees refunded on PancakeSwap": "Get up to $8M USD in interface fees refunded on PancakeSwap",
@@ -3391,5 +3385,8 @@
   "Gas fee": "Gas fee",
   "Gas / Network fee": "Gas / Network fee",
   "“Gas” is a measure of how much it costs someone to transact on the blockchain.": "“Gas” is a measure of how much it costs someone to transact on the blockchain.",
-  "Please check tx confirm modal in your wallet for the final gas fee.": "Please check tx confirm modal in your wallet for the final gas fee."
+  "Please check tx confirm modal in your wallet for the final gas fee.": "Please check tx confirm modal in your wallet for the final gas fee.",
+  "Insufficient %symbol% balance for gas fee": "Insufficient %symbol% balance for gas fee",
+  "Gas Token": "Gas Token",
+  "Powered by Zyfi Paymaster": "Powered by Zyfi Paymaster"
 }
