--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3358,13 +3358,11 @@
   "Select any ERC20 token to pay for the gas fee.": "Select any ERC20 token to pay for the gas fee.",
   "Pay for network fees with any asset from the list below.": "Pay for network fees with any asset from the list below.",
   "Make sure you have at least $1 worth of the token.": "Make sure you have at least $1 worth of the token.",
-  "Gas / Network fee": "Gas / Network fee",
-  "“Gas” is a measure of how much it costs someone to transact on the blockchain.": "“Gas” is a measure of how much it costs someone to transact on the blockchain.",
-  "Please check tx confirm modal in your wallet for the final gas fee.": "Please check tx confirm modal in your wallet for the final gas fee.",
-  "Insufficient %symbol% balance for gas fee": "Insufficient %symbol% balance for gas fee",
   "Gas Token": "Gas Token",
   "Up to $8M in interface fees paid refunded!": "Up to $8M in interface fees paid refunded!",
   "Get up to $8M USD in interface fees paid refunded on PancakeSwap": "Get up to $8M USD in interface fees paid refunded on PancakeSwap",
   "Match your volume and we'll refund ALL your interface fees paid": "Match your volume and we'll refund ALL your interface fees paid",
-  "Powered by Zyfi Paymaster": "Powered by Zyfi Paymaster"
+  "Powered by Zyfi Paymaster": "Powered by Zyfi Paymaster",
+  "Please refer to the transaction confirmation on your wallet for the final gas fee.": "Please refer to the transaction confirmation on your wallet for the final gas fee.",
+  "Select a token to pay gas fees.": "Select a token to pay gas fees."
 }
