--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3361,5 +3361,6 @@
   "Get up to $8M USD in interface fees refunded on PancakeSwap": "Get up to $8M USD in interface fees refunded on PancakeSwap",
   "Match your Uni volume on PancakeSwap to get a refund of up to": "Match your Uni volume on PancakeSwap to get a refund of up to",
   "$8M USD": "$8M USD",
-  "in Uniswap interface fees paid": "in Uniswap interface fees paid"
+  "in Uniswap interface fees paid": "in Uniswap interface fees paid",
+  "Cakepie": "Cakepie"
 }
