--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3363,5 +3363,6 @@
   "Match your Uni volume on PancakeSwap to get a refund of up to": "Match your Uni volume on PancakeSwap to get a refund of up to",
   "$8M USD": "$8M USD",
   "in Uniswap interface fees paid": "in Uniswap interface fees paid",
-  "Cakepie": "Cakepie"
+  "Cakepie": "Cakepie",
+  "OK": "OK"
 }
