--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -273,6 +273,7 @@
   "Stake LP tokens to earn.": "Stake LP tokens to earn.",
   "Basic Sale": "Basic Sale",
   "Unlimited Sale": "Unlimited Sale",
+  "No limits on the amount you can commit.": "No limits on the amount you can commit.",
   "No limits on the amount you can commit. Additional fee applies when claiming.": "No limits on the amount you can commit. Additional fee applies when claiming.",
   "Every person can only commit a limited amount, but may expect a higher return per token committed.": "Every person can only commit a limited amount, but may expect a higher return per token committed.",
   "You didn’t participate in this sale!": "You didn’t participate in this sale!",
