--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3385,5 +3385,8 @@
   "Pay gas on zkSync Era PancakeSwap with 10+ ERC-20 tokens": "Pay gas on zkSync Era PancakeSwap with 10+ ERC-20 tokens",
   "Enjoy Gas-Free Transactions on zkSync PancakeSwap": "Enjoy Gas-Free Transactions on zkSync PancakeSwap",
   "Enjoy Gas-Free Transactions on zkSync Era PancakeSwap": "Enjoy Gas-Free Transactions on zkSync Era PancakeSwap",
-  "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's": "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's"
+  "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's": "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's",
+  "Users are encouraged to try out": "Users are encouraged to try out",
+  "Taiko": "Taiko",
+  "ahead of any potential PancakeSwap Affiliate deployment": "ahead of any potential PancakeSwap Affiliate deployment"
 }
