feat: Affiliate referral expiration popup (#9979)
<!--
Before opening a pull request, please read the [contributing
guidelines](https://github.com/pancakeswap/pancake-frontend/blob/develop/CONTRIBUTING.md)
first
-->

<!-- start pr-codex -->

---

## PR-Codex overview
The focus of this PR is to introduce an `AffiliateExpiredModal`
component and related functionality.

### Detailed summary
- Added `AffiliateExpiredModal` component
- Created `useUserAcknowledgement` hook
- Introduced `useInAccessList` hook
- Updated `DisclaimerModal` component
- Added access list utility functions
- Updated translations
- Added affiliate addresses to check for expiration

> The following files were skipped due to too many changes:
`packages/localization/src/config/translations.json`

> ✨ Ask PR-Codex anything about this PR by commenting with `/codex {your
question}`

<!-- end pr-codex -->

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3382,8 +3382,13 @@
   "Pay gas on zkSync Era PancakeSwap with 10+ ERC-20 tokens": "Pay gas on zkSync Era PancakeSwap with 10+ ERC-20 tokens",
   "Enjoy Gas-Free Transactions on zkSync PancakeSwap": "Enjoy Gas-Free Transactions on zkSync PancakeSwap",
   "Enjoy Gas-Free Transactions on zkSync Era PancakeSwap": "Enjoy Gas-Free Transactions on zkSync Era PancakeSwap",
-  "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's": "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's",
   "Users are encouraged to try out": "Users are encouraged to try out",
   "Taiko": "Taiko",
-  "ahead of any potential PancakeSwap Affiliate deployment": "ahead of any potential PancakeSwap Affiliate deployment"
+  "ahead of any potential PancakeSwap Affiliate deployment": "ahead of any potential PancakeSwap Affiliate deployment",
+  "Important Update": "Important Update",
+  "claim": "claim",
+  "I've read and understood the following update.": "I've read and understood the following update.",
+  "Please be informed that the Affiliate who referred you and through whose referral link you signed up to trade is no longer part of PancakeSwap's Affiliate Program. As a result, effective immediately June 12, 2024, you will no longer receive any trading discounts from this Affiliate if they were previously enabled.": "Please be informed that the Affiliate who referred you and through whose referral link you signed up to trade is no longer part of PancakeSwap's Affiliate Program. As a result, effective immediately June 12, 2024, you will no longer receive any trading discounts from this Affiliate if they were previously enabled.",
+  "You can still access the affiliate claims dashboard until July 31, 2024. If you have any outstanding discounts unclaimed, please %claim% them before this date. After July 31, 2024, any unclaimed discounts will be forfeited, and you will no longer have access to the affiliate claims dashboard.": "You can still access the affiliate claims dashboard until July 31, 2024. If you have any outstanding discounts unclaimed, please %claim% them before this date. After July 31, 2024, any unclaimed discounts will be forfeited, and you will no longer have access to the affiliate claims dashboard.",
+  "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's": "Overnight has temporarily paused USD+ operations on zkSync due to the recent Velocore exploit.Swap, approve, and add / remove liquidity functions are currently unavailable. More information can be found on Overnight's"
 }
