--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3391,5 +3391,35 @@
   "Claim your Farm rewards on PancakeSwap and your Merkl rewards on": "Claim your Farm rewards on PancakeSwap and your Merkl rewards on",
   "Merkl's website": "Merkl's website",
   "Claim Reward & Unstake": "Claim Reward & Unstake",
-  "Warning: The $ATH token pool is not a valid token trading pair - please stop buying": "Warning: The $ATH token pool is not a valid token trading pair - please stop buying"
+  "Warning: The $ATH token pool is not a valid token trading pair - please stop buying": "Warning: The $ATH token pool is not a valid token trading pair - please stop buying",
+  "Syncing VeCake": "Syncing VeCake",
+  "Your VeCake is Syncing to": "Your VeCake is Syncing to",
+  "veCAKE Sync": "veCAKE Sync",
+  "Sync your veCAKE and Pancake Profile across all supported networks.": "Sync your veCAKE and Pancake Profile across all supported networks.",
+  "Network to Sync": "Network to Sync",
+  "Arbitrum": "Arbitrum",
+  "Sync": "Sync",
+  "Once synced, your veCAKE on the selected network will stay in sync with BNB Chain.": "Once synced, your veCAKE on the selected network will stay in sync with BNB Chain.",
+  "You will need to sync again after extending or adding more CAKE to your CAKE Staking position.": "You will need to sync again after extending or adding more CAKE to your CAKE Staking position.",
+  "Your Pancake Profile will be synced along with your veCAKE.": "Your Pancake Profile will be synced along with your veCAKE.",
+  "BNB": "BNB",
+  "In Progress": "In Progress",
+  "Synced": "Synced",
+  "To be Synced": "To be Synced",
+  "veCake Sync": "veCake Sync",
+  "From BSC to": "From BSC to",
+  "Cross chain fee": "Cross chain fee",
+  "Insufficient BNB balance": "Insufficient BNB balance",
+  "veCake Sync Submitted": "veCake Sync Submitted",
+  "Number of Chains Synced": "Number of Chains Synced",
+  "View Details": "View Details",
+  "Enjoy the same veCAKE benefits on other networks.": "Enjoy the same veCAKE benefits on other networks.",
+  "Explorer other PancakeSwap benefits.": "Explorer other PancakeSwap benefits.",
+  "Enjoy on Every Chains": "Enjoy on Every Chains",
+  "Enjoy These Benefits": "Enjoy These Benefits",
+  "veCAKE Not Synced": "veCAKE Not Synced",
+  "Boost unlimited number of positions on all V3 Farms. Boost will be applied when staking.": "Boost unlimited number of positions on all V3 Farms. Boost will be applied when staking.",
+  "You need to sync your veCAKE to the current network to activate farm yield boosters.": "You need to sync your veCAKE to the current network to activate farm yield boosters.",
+  "Sync veCake": "Sync veCake",
+  "You will need to re-sync your veCAKE after extending or adding more CAKE to your veCAKE staking position.": "You will need to re-sync your veCAKE after extending or adding more CAKE to your veCAKE staking position."
 }
