--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3392,8 +3392,8 @@
   "Merkl's website": "Merkl's website",
   "Claim Reward & Unstake": "Claim Reward & Unstake",
   "Warning: The $ATH token pool is not a valid token trading pair - please stop buying": "Warning: The $ATH token pool is not a valid token trading pair - please stop buying",
-  "Syncing VeCake": "Syncing VeCake",
-  "Your VeCake is Syncing to": "Your VeCake is Syncing to",
+  "Syncing veCAKE": "Syncing veCAKE",
+  "Your veCAKE is Syncing to": "Your veCAKE is Syncing to",
   "veCAKE Sync": "veCAKE Sync",
   "Sync your veCAKE and Pancake Profile across all supported networks.": "Sync your veCAKE and Pancake Profile across all supported networks.",
   "Network to Sync": "Network to Sync",
@@ -3406,11 +3406,10 @@
   "In Progress": "In Progress",
   "Synced": "Synced",
   "To be Synced": "To be Synced",
-  "veCake Sync": "veCake Sync",
   "From BSC to": "From BSC to",
   "Cross chain fee": "Cross chain fee",
   "Insufficient BNB balance": "Insufficient BNB balance",
-  "veCake Sync Submitted": "veCake Sync Submitted",
+  "veCAKE Sync Submitted": "veCAKE Sync Submitted",
   "Number of Chains with veCAKE": "Number of Chains with veCAKE",
   "View Details": "View Details",
   "Enjoy the same veCAKE benefits on other networks.": "Enjoy the same veCAKE benefits on other networks.",
@@ -3420,7 +3419,7 @@
   "veCAKE Not Synced": "veCAKE Not Synced",
   "Boost unlimited number of positions on all V3 Farms. Boost will be applied when staking.": "Boost unlimited number of positions on all V3 Farms. Boost will be applied when staking.",
   "You need to sync your veCAKE to the current network to activate farm yield boosters.": "You need to sync your veCAKE to the current network to activate farm yield boosters.",
-  "Sync veCake": "Sync veCake",
+  "Sync veCAKE": "Sync veCAKE",
   "You will need to re-sync your veCAKE after extending or adding more CAKE to your veCAKE staking position.": "You will need to re-sync your veCAKE after extending or adding more CAKE to your veCAKE staking position.",
   "Sync veCAKE to activate yield booster": "Sync veCAKE to activate yield booster",
   "The network selected is already up-to-date.": "The network selected is already up-to-date.",
