chore: update translation

--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3397,18 +3397,15 @@
   "veCAKE Sync": "veCAKE Sync",
   "Sync your veCAKE and Pancake Profile across all supported networks.": "Sync your veCAKE and Pancake Profile across all supported networks.",
   "Network to Sync": "Network to Sync",
-  "Arbitrum": "Arbitrum",
   "Sync": "Sync",
   "Once synced, your veCAKE on the selected network will stay in sync with BNB Chain.": "Once synced, your veCAKE on the selected network will stay in sync with BNB Chain.",
   "You will need to sync again after extending or adding more CAKE to your CAKE Staking position.": "You will need to sync again after extending or adding more CAKE to your CAKE Staking position.",
   "Your Pancake Profile will be synced along with your veCAKE.": "Your Pancake Profile will be synced along with your veCAKE.",
-  "BNB": "BNB",
   "In Progress": "In Progress",
   "Synced": "Synced",
   "To be Synced": "To be Synced",
-  "From BSC to": "From BSC to",
+  "From %chain% to": "From %chain% to",
   "Cross chain fee": "Cross chain fee",
-  "Insufficient BNB balance": "Insufficient BNB balance",
   "veCAKE Sync Submitted": "veCAKE Sync Submitted",
   "Number of Chains with veCAKE": "Number of Chains with veCAKE",
   "View Details": "View Details",
