--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3390,5 +3390,29 @@
   "Incentives can now be earned on BOTH Merkl and Farms at the same time.": "Incentives can now be earned on BOTH Merkl and Farms at the same time.",
   "Stake your LP token in the Farm and accrue both Merkl and Farm rewards.": "Stake your LP token in the Farm and accrue both Merkl and Farm rewards.",
   "Claim your Farm rewards on PancakeSwap and your Merkl rewards on": "Claim your Farm rewards on PancakeSwap and your Merkl rewards on",
-  "Merkl's website": "Merkl's website"
+  "Merkl's website": "Merkl's website",
+  "Follow AI": "Follow AI",
+  "Against AI": "Against AI",
+  "Your bet": "Your bet",
+  "Result:": "Result:",
+  "AI %result%": "AI %result%",
+  "Lost": "Lost",
+  "Last price from Binance API": "Last price from Binance API",
+  "%against%AI Prediction": "%against%AI Prediction",
+  "Against ": "Against ",
+  "Follow": "Follow",
+  "Against": "Against",
+  "You are %positionMessage% prediction!": "You are %positionMessage% prediction!",
+  "following AI's": "following AI's",
+  "going against AI's": "going against AI's",
+  "AI prediction": "AI prediction",
+  "Enter bet by going with or against the prediction made by AI": "Enter bet by going with or against the prediction made by AI",
+  "You will be able to see AI is betting Up or Down after you place the bet!": "You will be able to see AI is betting Up or Down after you place the bet!",
+  "Powered by Allora": "Powered by Allora",
+  "%position% AI": "%position% AI",
+  "The Locked Price & Closed Price are exactly the same (within 8 decimals), so neither side wins. All funds entered into FOLLOW and AGAINST positions will go to the weekly CAKE burn.": "The Locked Price & Closed Price are exactly the same (within 8 decimals), so neither side wins. All funds entered into FOLLOW and AGAINST positions will go to the weekly CAKE burn.",
+  "AI's prediction": "AI's prediction",
+  "My position: %position% AI": "My position: %position% AI",
+  "AI's Bet": "AI's Bet",
+  "My Bet": "My Bet"
 }
