--- a/packages/localization/src/config/translations.json
+++ b/packages/localization/src/config/translations.json
@@ -3414,6 +3414,7 @@
   "My position: %position% AI": "My position: %position% AI",
   "AI's Bet": "AI's Bet",
   "My Bet": "My Bet",
+  "AI-Predicted Price": "AI-Predicted Price",
   "Claim Reward & Unstake": "Claim Reward & Unstake",
   "Warning: The $ATH token pool is not a valid token trading pair - please stop buying": "Warning: The $ATH token pool is not a valid token trading pair - please stop buying",
   "Syncing veCAKE": "Syncing veCAKE",
